<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_favorites">Favoritos</string>
    <string name="label_play">Reproducir</string>
    <string name="label_information">Información</string>
    <string name="nav_menu">Menu</string>
    <string name="nav_favorites">Favoritos</string>
    <string name="nav_gallery">Galeria</string>
    <string name="nav_maps">Mapa</string>
    <string name="premiere">Estreno</string>
    <string name="popular">Populares</string>
    <string name="top">Top</string>
    <string name="most_wanted">Mas buscadas</string>
    <string name="on_item_click_listener">onItemClickListener no inicializado</string>

    <string name="about">Sobre</string>
    <string name="actors">Actores</string>
    <string name="images">Imágenes</string>
    <string name="reviews">Críticas</string>

    <string name="raiting">Raiting: %s</string>
    <string name="language">Lenguaje original: %s</string>
    <string name="url_img">https://image.tmdb.org/t/p/w500/%s</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAe88CMEDZSzUJq28_ayfp8QSib8jbp8qI</string>

    <string name="author">
        <font face="roboto_bold" size="25"><b>Autor:</b></font> %s
    </string>
    <string name="name">
        <font face="roboto_bold" size="25"><b>Nombre:</b> </font> %s
    </string>
    <string name="user_name">
        <font face="roboto_bold" size="25"><b>Usuario:</b> </font> %s
    </string>
    <string name="rating_user">
        <font face="roboto_bold" size="25"><b>Raiting:</b> </font> %s
    </string>
    <string name="created_content">
        <font face="roboto_bold" size="25"><b>Publicado:</b> </font> %s
    </string>

    <string name="total_results">
        <font face="roboto_bold" size="25"><b>Total de resultados:</b></font>  %s
    </string>

    <string name="content_example">
        he latest film in the Marvel Cinematic Universe has arrived with “Shang Chi and The Legend of the Ten Rings”.\r\n\r\nThe film introduces audiences to Shang Chi (Simu Liu); an easygoing San Francisco
        resident who spends his time parking cars and hanging out with his friend Katy (Awkwafina) and her family.\r\n\r\nLife is steady if unspectacular until he is accosted on a city bus by a group looking to
        take a pendant his mother gave him. When Shang Chi shocks Katy and the occupants of the bus with his martial arts abilities; he attempts to find his sister Xialing (Meng’er Zhang).
    </string>
    <string name="see">Ver</string>
    <string name="update">Actualizar</string>
    <string name="upload_image">Subir imagen</string>
    <string name="upload">Guardar</string>
    <string name="close">Cerrar</string>
    <string name="error_message">Ocurrió un error</string>
    <string name="success_message">Operación exitosa</string>
    <string name="negative">Negar</string>
    <string name="acept">Aceptar</string>

    <string name="successfully_upload">Se subió correctamente</string>
    <string name="there_are_no_images_to_show">No hay imagenes para mostrar</string>
    <string name="error_querying_data">Error al consultar los datos</string>
    <string name="no_app_found_to_take_the_photo">No se encontró app para tomar la foto</string>
    <string name="you_need_location_permission">Necesitas permiso de ubicación</string>
    <string name="acecept_location_permission">Acepta el permiso de ubicación</string>
    <string name="location_uploaded_successfully">Ubicación cargada correctamente</string>
    <string name="your_location_could_not_be_uploaded">No se pudo subir tu ubicación</string>
    <string name="you_need_to_give_location">Necesita dar permisos de ubicación para usar esta funcinalidad</string>
    <string name="stopped_service">Servicio detenido</string>
    <string name="service_running">Servicio corriendo...</string>
</resources>