<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/cardReview"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:cardBackgroundColor="@color/primary_color"
    android:layout_height="wrap_content"
    android:layout_margin="13dp"
    android:foreground="?selectableItemBackgroundBorderless"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgUser"
            android:layout_width="@dimen/height_60"
            android:layout_height="@dimen/height_60"
            android:src="@drawable/ic_user"
            android:layout_marginTop="5dp"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/light_gray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/imgUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgUser"
            app:layout_constraintTop_toTopOf="@+id/imgUser">

            <TextView
                android:id="@+id/txtAutor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textColor="@color/light_gray"
                android:text="@string/author" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_gray"
                android:text="@string/name" />

            <TextView
                android:id="@+id/txtUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_gray"
                android:text="@string/user_name" />

            <TextView
                android:id="@+id/txtRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_gray"
                android:text="@string/rating_user" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/content_example"
            android:textColor="@color/light_gray"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/linear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/txtCreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_content"
            android:textColor="@color/light_gray"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@+id/txtContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>