<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_primary_dark">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_collapseMode="parallax"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="@color/color_primary_dark">

           <FrameLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <androidx.constraintlayout.widget.ConstraintLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="10dp">
                   <ImageView
                       android:id="@+id/imgHome"
                       android:layout_width="match_parent"
                       android:layout_height="350dp"
                       android:src="@drawable/ic_bg_movie"
                       app:layout_constraintTop_toTopOf="parent"
                       app:layout_constraintEnd_toEndOf="parent"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintBottom_toTopOf="@+id/btnPlay"/>

                   <LinearLayout
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:orientation="vertical"
                       android:gravity="center"
                       android:layout_marginStart="30dp"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintBottom_toBottomOf="parent">
                       <com.tistory.zladnrms.roundablelayout.RoundableLayout
                           android:id="@+id/imgFavorite"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:clickable="true"
                           android:foreground="?attr/selectableItemBackgroundBorderless"
                           app:cornerRightSide="@dimen/corner_radius_10"
                           app:cornerLeftSide="@dimen/corner_radius_10"
                           android:padding="@dimen/padding_5"
                           app:backgroundColor="@android:color/transparent"
                           android:focusable="true">
                           <ImageView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:src="@drawable/ic_plus" />
                       </com.tistory.zladnrms.roundablelayout.RoundableLayout>
                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/label_favorites"
                           android:textSize="@dimen/size_12"
                           android:textColor="@color/gray_litte"/>
                   </LinearLayout>

                   <Button
                       android:id="@+id/btnPlay"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/label_play"
                       android:backgroundTint="@color/gray_litte"
                       android:drawableStart="@drawable/ic_play"
                       app:layout_constraintBottom_toBottomOf="parent"
                       app:layout_constraintEnd_toEndOf="parent"
                       app:layout_constraintStart_toStartOf="parent"/>

                   <LinearLayout
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:orientation="vertical"
                       android:gravity="center"
                       android:layout_marginEnd="30dp"
                       app:layout_constraintEnd_toEndOf="parent"
                       app:layout_constraintBottom_toBottomOf="parent">
                       <com.tistory.zladnrms.roundablelayout.RoundableLayout
                           android:id="@+id/imgInformation"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:clickable="true"
                           android:padding="@dimen/padding_5"
                           android:foreground="?attr/selectableItemBackgroundBorderless"
                           app:cornerRightSide="@dimen/corner_radius_10"
                           app:cornerLeftSide="@dimen/corner_radius_10"
                           app:backgroundColor="@android:color/transparent"
                           android:focusable="true">
                           <ImageView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:src="@drawable/ic_information" />
                       </com.tistory.zladnrms.roundablelayout.RoundableLayout>
                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/label_information"
                           android:textSize="@dimen/size_12"
                           android:textColor="@color/gray_litte"/>
                   </LinearLayout>

               </androidx.constraintlayout.widget.ConstraintLayout>

           </FrameLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_collapseMode="pin">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:fitsSystemWindows="true"
                    app:contentScrim="@color/primary_color"
                    app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                    app:title="NetFlix">

                    <ImageView
                        android:layout_width="@dimen/width_ic_home"
                        android:layout_height="@dimen/width_ic_home"
                        android:src="@drawable/ic_icon_n"
                        android:layout_marginStart="10dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                    <ImageView
                        android:layout_width="@dimen/width_ic_home"
                        android:layout_height="@dimen/width_ic_home"
                        android:src="@drawable/ic_user"
                        android:layout_marginEnd="10dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.tistory.zladnrms.roundablelayout.RoundableLayout
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    app:cornerLeftSide="@dimen/corner_radius_10"
                    app:cornerRightSide="@dimen/corner_radius_10"/>
                <com.tistory.zladnrms.roundablelayout.RoundableLayout
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    app:cornerLeftSide="@dimen/corner_radius_10"
                    app:cornerRightSide="@dimen/corner_radius_10"/>
                <com.tistory.zladnrms.roundablelayout.RoundableLayout
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    app:cornerLeftSide="@dimen/corner_radius_10"
                    app:cornerRightSide="@dimen/corner_radius_10"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.tistory.zladnrms.roundablelayout.RoundableLayout
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    app:cornerLeftSide="@dimen/corner_radius_10"
                    app:cornerRightSide="@dimen/corner_radius_10"/>
                <com.tistory.zladnrms.roundablelayout.RoundableLayout
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    app:cornerLeftSide="@dimen/corner_radius_10"
                    app:cornerRightSide="@dimen/corner_radius_10"/>
                <com.tistory.zladnrms.roundablelayout.RoundableLayout
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    app:cornerLeftSide="@dimen/corner_radius_10"
                    app:cornerRightSide="@dimen/corner_radius_10"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:textColor="@color/gray_litte"
                android:text="xzlczxc asdkasdkljaskdlas jdklajdslaksdj askld alksdjaklsdja skldjalksdjaslkd aslkdjas kldaszxczk asldñjkasñdkasjdklad lakdjasdasdas kdjashdaskldjashd kajshdalksdashd lakshdakjsdhad alkjsdhaskljdhas lkajdsh askjlhaslkjhda slkjd askjdhasldkja shdkja das djs d"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>